# openalgernon-mcp

./: .gitignore  README.md  pyproject.toml
src/openalgernon_mcp/: content.py  db.py  fsrs.py  profiles.py  server.py
src/openalgernon_mcp/tools/: cards.py  content.py  study.py  teaching.py
tests/: test_content.py  test_db.py  test_fsrs.py  test_install.py  test_tools_cards.py  test_tools_content.py  test_tools_study.py  test_tools_teaching.py
