[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openalgernon-mcp"
version = "0.1.0"
description = "MCP server for the OpenAlgernon study platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
openalgernon-mcp = "openalgernon_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openalgernon_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
